WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95783
[BlackBerry] FatFingers::cachingStrategy uses incorrect enum value
https://bugs.webkit.org/show_bug.cgi?id=95783
Summary
[BlackBerry] FatFingers::cachingStrategy uses incorrect enum value
Rob Buis
Reported
2012-09-04 14:22:22 PDT
The switch statement in FatFingers::cachingStrategy seems to mix up two different enums.
Attachments
Patch
(1.50 KB, patch)
2012-09-04 14:24 PDT
,
Rob Buis
tonikitoo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2012-09-04 14:24:57 PDT
Created
attachment 162101
[details]
Patch
Rob Buis
Comment 2
2012-09-04 15:28:38 PDT
Committed
r127515
: <
http://trac.webkit.org/changeset/127515
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug