[BlackBerry] FatFingers::cachingStrategy uses incorrect enum value https://bugs.webkit.org/show_bug.cgi?id=95783

Reviewed by Antonio Gomes.

Use the correct enum values.

* WebKitSupport/FatFingers.cpp:
(BlackBerry::WebKit::FatFingers::cachingStrategy):

Canonical link: https://commits.webkit.org/113662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127515 268f45cc-cd09-0410-ab3c-d52691b4dbfc